# ExcuseMe

./: .last_build_id  ABA.md  LICENSE  Makefile  README.md  env.example  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  pyproject.toml  version.json
.github/workflows/: django_autotest.yaml  flutter_web.yaml
assets/: .env  AssetManifest.bin.json  NOTICES
backend/: .gitignore  docker-compose.yml  env.example  pyproject.toml
backend/deployment/: Dockerfile
backend/deployment/scripts/backend/: start.sh
backend/src/: manage.py  requirements.txt
backend/src/api/: admin.py  models.py  permissions.py  serializer.py  signature.py  tasks.py  urls.py  views.py  webuntis.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_user_school.py  0002_excuse_approval_timestamp_excuse_approved_by_and_more.py  0002_user_role.py  0003_parentkey.py  0003_user_klasse.py
backend/src/excuseme/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/src/excuseme/settings/: base.py  dev.py  prod.py
backend/src/tests/: test_api.sh
backend/src/tests/models/: test_models.py
excuseme/: README.md  env.example  pubspec.yaml
excuseme/android/app/: build.gradle.kts
excuseme/android/app/src/main/: AndroidManifest.xml
excuseme/android/app/src/main/kotlin/com/example/excuseme/: MainActivity.kt
excuseme/ios/Runner/: Info.plist
excuseme/ios/Runner.xcodeproj/: project.pbxproj
excuseme/lib/: main.dart  skeleton.dart
excuseme/lib/models/: storage.dart  user.dart
excuseme/lib/pages/: excuses_page.dart  home_page.dart  login_page.dart  settings_page.dart  skeleton.dart  statistics_page.dart
excuseme/linux/: CMakeLists.txt
excuseme/linux/runner/: my_application.cc
excuseme/macos/Runner.xcodeproj/: project.pbxproj
excuseme/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
excuseme/macos/Runner/Configs/: AppInfo.xcconfig
excuseme/test/: widget_test.dart
excuseme/web/: index.html  manifest.json
excuseme/windows/: CMakeLists.txt
excuseme/windows/runner/: Runner.rc  main.cpp
src/: requirements.txt
src/api/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_testmodel_file.py  0002_alter_user_created_at.py  0002_alter_user_created_at_alter_user_password_hash.py  0002_delete_testmodel.py  0003_class_school_user_teacher_student_parent_and_more.py  0004_docuemnt_status_documentteacher_docuemnt_teachers_and_more.py
src/api/templates/frontend/: index.html
src/excuseme/: urls.py
src/excuseme/settings/: base.py  dev.py
src/tests/models/: test_models.py
src/tests/test_api/: test_api.py  test_models.py
thesis/: abbreviations.csv  main.typ  references.bib
thesis/chapters/: 1_introduction.typ  2_grundlagen.typ  3_methodik.typ  4_implementierung.typ  5_ergebnisse.typ  abstract.typ  declaration.typ  footer.typ  grundlagen.typ  introduction.typ  technologien.typ
